fixed some design issues design is now aligned with the rest of the website

--- a/TeacherApp/wwwroot/css/AdminLogin.css
+++ b/TeacherApp/wwwroot/css/AdminLogin.css
@@ -35,7 +35,7 @@
 }
 
 .main-div {
-    background: #ffffff none repeat scroll 0 0;
+    background: #fff none repeat scroll 0 0;
     border-radius: 2px;
     margin: 10px auto 30px;
     max-width: 38%;
