--- a/TeacherApp/wwwroot/css/site.css
+++ b/TeacherApp/wwwroot/css/site.css
@@ -2,7 +2,7 @@ body {
     padding-top: 50px;
     padding-bottom: 20px;
     background-color: #333;
-    color: #FFF;
+    color: #F5F5F5;
 }
 
 /* Wrapping element */
@@ -10,6 +10,7 @@ body {
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color: #333;
 }
 
 /* Carousel */
